[package]
name = "easycookie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"]}
futures = "0.3" # for our async / await blocks
serde = { version = "1.0.190", features = ["derive"] }