[package]
name = "easycookie"
version = "1.0.1"
authors = ["Klubuntu"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Klubuntu/easycookie-rs"
readme = "readme.md"
description = "Simple method to get cookie from header for Rust"

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"]}
futures = "0.3" # for our async / await blocks
serde = { version = "1.0.190", features = ["derive"] }
