[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easycookie = { path = ".." }
reqwest = { version = "0.11", features = ["json", "native-tls"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
